# SDL_mixer

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .wikiheaders-options  Android.mk  CHANGES  CHANGES.txt  CMakeLists.txt  COPYING.txt  INSTALL.md  Makefile.in  Makefile.os2  README  README-versions.md  README.md  README.txt  SDL2_mixer.pc.in  SDL2_mixer.spec.in  SDL2_mixerConfig.cmake.in  SDL3_mixer.pc.in  SDL3_mixerConfig.cmake.in  SDL_mixer.h  SDL_mixer.pc.in  SDL_mixer.spec.in  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  dynamic_flac.c  dynamic_flac.h  dynamic_fluidsynth.c  dynamic_fluidsynth.h  dynamic_mod.c  dynamic_mod.h  dynamic_modplug.c  dynamic_modplug.h  dynamic_mp3.c  dynamic_mp3.h  (+59 more)
.github/: PULL_REQUEST_TEMPLATE.md  fetch_yasm.ps1
.github/workflows/: linux.yml  main.yml  release.yml
VisualC/: SDL_mixer.sln  SDL_mixer.vcproj  SDL_mixer.vcxproj  SDL_mixer.vcxproj.filters  SDL_mixer_VS2008.vcproj  SDL_mixer_VS2010.vcxproj  SDL_mixer_VS2012.vcxproj  SDL_mixer_VS2013.sln  SDL_mixer_VS2013.vcxproj  Version.rc
VisualC-WinRT/: SDL_mixer-UWP.sln  SDL_mixer-UWP.vcxproj  SDL_mixer-UWP.vcxproj.filters
VisualC-WinRT/UWP_VS2015/: SDL_mixer-UWP.vcxproj  SDL_mixer-UWP.vcxproj.filters  libogg_dynamic-UWP.vcxproj  libvorbis_dynamic-UWP.vcxproj  libvorbisfile_dynamic-UWP.vcxproj
VisualC-WinRT/WinPhone80_VS2012/: SDL_mixer-WinPhone80.vcxproj  SDL_mixer-WinPhone80.vcxproj.filters  libogg_dynamic-WinPhone80.vcxproj  libvorbis_dynamic-WinPhone80.vcxproj  libvorbisfile_dynamic-WinPhone80.vcxproj
VisualC-WinRT/WinPhone81_VS2013/: SDL2_mixer-WinPhone81.vcxproj.filters  SDL_mixer-WinPhone81.vcxproj  SDL_mixer-WinPhone81.vcxproj.filters  libogg_dynamic-WinPhone81.vcxproj  libvorbis_dynamic-WinPhone81.vcxproj  libvorbisfile_dynamic-WinPhone81.vcxproj
VisualC-WinRT/WinRT80_VS2012/: SDL_mixer-WinRT80.vcxproj  SDL_mixer-WinRT80.vcxproj.filters  libogg_dynamic-WinRT80.vcxproj  libvorbis_dynamic-WinRT80.vcxproj  libvorbisfile_dynamic-WinRT80.vcxproj
VisualC-WinRT/WinRT81_VS2013/: SDL_mixer-WinRT81.vcxproj  SDL_mixer-WinRT81.vcxproj.filters  libogg_dynamic-WinRT81.vcxproj  libvorbis_dynamic-WinRT81.vcxproj  libvorbisfile_dynamic-WinRT81.vcxproj
VisualC/native_midi/: native_midi.vcproj  native_midi.vcxproj  native_midi_VS2008.vcproj  native_midi_VS2013.vcxproj
VisualC/playmus/: playmus.vcproj  playmus.vcxproj  playmus_VS2008.vcproj  playmus_VS2012.vcxproj  playmus_VS2013.vcxproj
VisualC/playwave/: playwave.vcproj  playwave.vcxproj  playwave_VS2008.vcproj  playwave_VS2012.vcxproj  playwave_VS2013.vcxproj
VisualC/timidity/: timidity.vcproj  timidity.vcxproj  timidity_VS2008.vcproj  timidity_VS2013.vcxproj
Xcode/: Info-Framework.plist  config.xcconfig
Xcode-iOS/SDL_mixer.xcodeproj/: project.pbxproj
Xcode/FLAC/: config.h
Xcode/SDL_mixer.xcodeproj/: project.pbxproj
Xcode/mpg123/: config.xcconfig  mpg123.h
Xcode/opus/: config.xcconfig
Xcode/pkg-support/: build.xcconfig
Xcode/playwave/: SDL_uikit_main.c
Xcode/tremor/: config.h
Xcode/vorbis/: config.h
Xcode/wavpack/: config.xcconfig
build-scripts/: android-prefab.sh  build-release.py  config.sub  release-info.json  test-versioning.sh  touch-autofoo.sh
cmake/: FindFLAC.cmake  FindFluidSynth.cmake  FindMPG123.cmake  FindOgg.cmake  FindOpus.cmake  FindOpusFile.cmake  FindSndFile.cmake  FindVorbis.cmake  Findgme.cmake  Findlibxmp-lite.cmake  Findlibxmp.cmake  Findmodplug.cmake  Findmpg123.cmake  Findopusfile.cmake  Findtremor.cmake  Findvorbisfile.cmake  Findwavpack.cmake  PrivateSdlFunctions.cmake  SDL3_mixerConfig.cmake.in  sdl3-mixer.pc.in  sdlcpu.cmake
cmake/test/: CMakeLists.txt  main.c
debian/: changelog  control  copyright  rules
docs/: INTRO-androidstudio.md  INTRO-cmake.md  INTRO-emscripten.md  INTRO-visualstudio.md  INTRO-xcode.md  README-migration.md  hello.c  release_checklist.md
examples/: CMakeLists.txt  README.md  categories.txt  highlight-plugin.lua  playmus.c  playwave.c  template.html
examples/advanced/01-tag-tracks/: README.txt  tag-tracks.c
examples/basics/01-load-and-play/: README.txt  load-and-play.c
examples/basics/02-play-with-options/: README.txt  play-with-options.c
examples/basics/03-play-multiple-sounds/: README.txt  play-multiple-sounds.c
examples/basics/04-metadata/: README.txt  metadata.c
examples/basics/05-sinewave/: README.txt  sinewave.c
examples/basics/06-seeking/: README.txt  seeking.c
include/: SDL_mixer.h
include/SDL3/: SDL_mixer.h
include/SDL3_mixer/: SDL_mixer.h
mingw/pkg-support/: Makefile
native_midi/: native_midi.h  native_midi_common.c  native_midi_haiku.cpp  native_midi_mac.c  native_midi_macosx.c  native_midi_win32.c
src/: SDL_mixer.c  SDL_mixer.exports  SDL_mixer.sym  SDL_mixer_internal.h  SDL_mixer_metadata_tags.c  SDL_mixer_spatialization.c  compat.c  compat.h  decoder_aiff.c  decoder_au.c  decoder_drflac.c  decoder_drmp3.c  decoder_flac.c  decoder_fluidsynth.c  decoder_gme.c  decoder_mpg123.c  decoder_opus.c  decoder_raw.c  decoder_sinewave.c  decoder_stb_vorbis.c  decoder_timidity.c  decoder_voc.c  decoder_vorbis.c  decoder_wav.c  decoder_wavpack.c  decoder_xmp.c  effect_position.c  effect_stereoreverse.c  effects_internal.c  effects_internal.h  mixer.c  mixer.h  music.c  music.h  utils.c  utils.h  version.rc
src/codecs/: load_aiff.c  load_aiff.h  load_sndfile.c  load_sndfile.h  load_voc.c  load_voc.h  mp3utils.c  mp3utils.h  music_cmd.c  music_cmd.h  music_drflac.c  music_drflac.h  music_drmp3.c  music_drmp3.h  music_flac.c  music_flac.h  music_fluidsynth.c  music_fluidsynth.h  music_gme.c  music_gme.h  music_mad.c  music_mikmod.c  music_minimp3.c  music_minimp3.h  music_modplug.c  music_modplug.h  music_mpg123.c  music_mpg123.h  music_nativemidi.c  music_nativemidi.h  music_ogg.c  music_ogg.h  music_ogg_stb.c  music_ogg_stb.h  music_opus.c  music_opus.h  music_wav.c  (+11 more)
test/: CMakeLists.txt  testaudiodecoder.c  testmixer.c  testspatialization.c
timidity/: CMakeLists.txt  common.c  instrum.c  instrum_dls.c  instrum_dls.h  mix.c  output.c  output.h  playmidi.c  readmidi.c  resample.c  timidity.c  timidity.h
(+149 files in other folders)
